# gpt-discord-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build_deploy.yml
ogpt/: Cargo.toml
ogpt/src/: error.rs  lib.rs  utils.rs
ogpt/src/client/: client.rs  mod.rs
ogpt/src/model/: chat_completions.rs  mod.rs  models.rs
rust-gpt/: Cargo.toml
rust-gpt/src/: constants.rs  error.rs  lib.rs
rust-gpt/src/client/: client.rs
rust-gpt/src/error/: error.rs
rust-gpt/src/model/: chat_message.rs  chat_request.rs  chat_response.rs  mod.rs
src/: error.rs  lib.rs  main.rs
src/command/: command.rs  error.rs  gpt.rs  help.rs  join.rs  mod.rs  pause.rs  ping.rs  play.rs  prompt.rs  queue.rs  reply.rs  resume.rs  skip.rs  stop.rs
src/handler/: handler.rs  mod.rs
