[package]
name = "gpt-discord_bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
serenity = { version = "0.11", default-features = false, features=["client", "gateway", "rustls_backend", "model", "voice"] }
tokio = { version = "1.21.2", features = ["full"] }
ogpt = { path = "ogpt" }
lru = "0.10.0"
songbird = { version = "0.3.1"}